<resources>
    <string name="app_name">Call</string>
    <string name="call_logs">Call Logs</string>
    <string name="call_history">Last Sync: 2023-08-29 18:24:26</string>
    <string name="my_number"> +919504321262</string>
    <string name="incoming">INCOMING</string>
    <string name="date_tuesday_12_september_2023_11_12_26_dur_88s">Date: Tuesday 12 September 2023 11:12:26 | Dur: 88s</string>
    <string name="from_919897198971">From: +919897198971</string>
    <string name="_009504321262455_009504321262_20230912111230_mp3">009504321262(009504321262)_20230912111230.mp3</string>
</resources>